compiler/toc_analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__error_arithmetic_wrong_types-17.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
expression: "-false"

---
InnerCtx {
    eval_infos: [
        EvalInfo { unit_id: UnitId(0), span: Span { file: None, range: 11..17 }, state: Error(ConstError { kind: WrongOperandType, span: Span { file: None, range: 11..12 } }) },
    ],
    var_to_expr: {
        GlobalDefId(UnitId(0), DefId(0)): ConstExpr { id: 0 },
    },
}
ConstExpr { id: 0 } -> ConstError { kind: WrongOperandType, span: Span { file: None, range: 11..12 } }

error at 11..12: wrong type for compile-time expression

