compiler/toc_analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__error_arithmetic_wrong_types-20.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
assertion_line: 20
expression: 1 mod true

---
"_"@(FileId(1), 6..7) -> ConstError { kind: WrongOperandType, span: (FileId(1), 13..16) }

error in file FileId(1) at 13..16: cannot compute expression at compile-time
| error in file FileId(1) for 13..16: wrong type for compile-time expression

