compiler/toc_analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__error_arithmetic_wrong_types-22.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
expression: 1 ** true

---
"_"@(FileId(1), 6..7) -> ConstError { kind: WrongOperandType, span: (FileId(1), 13..15) }

error in file FileId(1) at 13..15: wrong type for compile-time expression

